--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <tr>
           <!-- LOGO -->
           <td width="150" align="center" valign="middle" style="border-right: 1px solid #ddd;">
-            <img src="logo MP.png" alt="Logo" width="120" style="display:block;">
+            <img src="logomp.png" alt="Logo" width="120" style="display:block;">
           </td>
 
           <!-- NOME / CARGO -->
