--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
             <table cellpadding="0" cellspacing="0" border="0">
               <tr>
                 <td>
-                  <a href="https://www.instagram.com/seu_perfil" target="_blank">
+                  <a href="https://www.instagram.com/mountainpuzzle" target="_blank">
                     <img src="instagram.png" alt="Instagram" width="35" height="35" style="display:block;">
                   </a>
                 </td>
                 <td width="10"></td>
                 <td>
-                  <a href="https://www.linkedin.com/in/seu_perfil" target="_blank">
-                    <img src="linkedin.png" alt="LinkedIn" width="35" height="35" style="display:block;">
+                  <a href="https://www.linkedin.com/company/mountainpuzzle" target="_blank">
+                    <img src="linked.png" alt="LinkedIn" width="35" height="35" style="display:block;">
                   </a>
                 </td>
                 <td width="10"></td>
                 <td>
-                  <a href="https://www.facebook.com/seu_perfil" target="_blank">
+                  <a href="https://www.facebook.com/profile.php?id=100032361863343" target="_blank">
                     <img src="facebook.png" alt="Facebook" width="35" height="35" style="display:block;">
                   </a>
                 </td>
